# fx-rack

./: .gitignore  CMakeLists.txt  README.md  SineGen.cpp  SineGen.h  app.js  index.html  main.cpp  main.js  package-lock.json  package.json  rollup.config.js
app/: app.js  index.html  style.css
avlib/src/: WaveFile.cpp
native/: Device.cpp  Device.h  Distortion.cpp  Distortion.h  Duration.h  Filter.cpp  Filter.h  Reverb.cpp  Reverb.h  duaration.h  main.cpp
native/avlib/include/iimavlib/: Utils.h  WaveFile.h  WaveSource.h
native/avlib/src/: CMakeLists.txt  WaveFile.cpp  WaveSource.cpp
public/: global.css  index.html
src/: App.svelte  types.ts
src/components/: Device.svelte  DeviceMenu.svelte  Distortion.svelte  Filter.svelte  Knob.svelte  Player.svelte  Reverb.svelte
src/style/: global.scss
